--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -29,11 +29,9 @@ jobs:
         python -m pygbag --build $GITHUB_WORKSPACE/src/main.py
     - name: debug
       run: |
-        ls $GITHUB_WORKSPACE/src/
-        ls $GITHUB_WORKSPACE/src/build
         ls $GITHUB_WORKSPACE/src/build/web
     - name: Deploy to GitHub Pages
       uses: JamesIves/github-pages-deploy-action@4.1.7
       with:
         branch: gh-pages
-        folder: build/web
+        folder: $GITHUB_WORKSPACE/src/build/web
